# g2tm-segmenter

./: .gitignore  LICENSE  README.md  RESULTS.md  TRAINING.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  python-package-conda.yml
g2tm/: README.md  pyproject.toml  setup.py
g2tm/g2tm/: __init__.py  attention.py  graph_merge.py  version.py
g2tm/g2tm/patch/: __init__.py  graph_segmenter_patch.py
g2tm/g2tm/vis/: __init__.py  vis.py
segm/: README.md  config.py  config.yml  engine.py  export_onnx.py  flops.py  inference_utils.py  metrics.py  profile_model.py  show_attn_map.py  speedtest.py  test.py  token_stats.py  train.py  version.py
segm/data/: __init__.py  ade20k.py  base.py  cityscapes.py  factory.py  imagenet.py  loader.py  pascal_context.py  utils.py
segm/data/config/: ade20k.py  ade20k.yml  cityscapes.py  cityscapes.yml  pascal_context.py  pascal_context.yml
segm/eval/: __init__.py  accuracy.py  miou.py
segm/model/: __init__.py  blocks.py  decoder.py  factory.py  segmenter.py  utils.py  vit.py
segm/optim/: __init__.py  factory.py  scheduler.py
segm/scripts/: __init__.py  prepare_ade20k.py  prepare_cityscapes.py  prepare_pcontext.py
segm/utils/: __init__.py  distributed.py  download.py  lines.py  logger.py  logs.py  torch.py
