[build-system]
requires = [
    "click",
    "setuptools<80.9.0",
    "numpy<2",
    "einops",
    "python-hostlist",
    "tqdm",
    "requests",
    "pyyaml",
    "torch<2",
    "onnx",
    "onnxscript",
    "timm==0.4.12",
    "mmcv==1.3.8",
    "mmsegmentation==0.14.1",
    "fvcore",
]
build-backend = "setuptools.build_meta"