[build-system]
requires = [
    "setuptools<80.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "segm"
version = "0.0.1b"
description = "Segmenter: Transformer for Semantic Segmentation adapted for G2TM."
readme = { file = "./segm/README.md", content-type = "text/markdown" }
dependencies = [
    "click",
    "numpy<2",
    "einops",
    "python-hostlist",
    "tqdm",
    "requests",
    "pyyaml",
    "torch<2",
    "onnx",
    "onnxscript",
    "onnxruntime",
    "timm==0.9",
    "mmcv<2",
    "mmsegmentation<1",
    "fvcore",
    "cityscapesscripts",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "flake8",
]