[build-system]
requires = [
    "setuptools<80.9.0",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "segm"
version = "0.0.1c"
description = "Segmenter: Transformer for Semantic Segmentation adapted for G2TM."
readme = { file = "./segm/README.md", content-type = "text/markdown" }
dependencies = [
    "click",
    "ftfy",
    "regex",
    "numpy",
    "einops",
    "python-hostlist",
    "tqdm",
    "requests",
    "pyyaml",
    "torch>=2",
    "torchvision",
    "onnx",
    "onnxscript",
    "onnxruntime",
    "onnxruntime-gpu",
    "timm",
    "mmcv<2.2.0",
    "mmsegmentation==1.2.2",
    "fvcore",
    "cityscapesscripts",
    "tensorboard",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "flake8",
]
